# IsometricTiler

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  main.cpp
Graphics/: Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture.cpp  Texture.h
Input/: Input.h
IsometricTiler/: Game.h
game_folder/shaders/: shader.frag  shader.vert
libraries/: CMakeLists.txt
libraries/NAGGL/: CMakeLists.txt
libraries/NAGGL/include/NAGGL/: Shader.h  Sprite.h  Texture.h
libraries/NAGGL/src/: Shader.cpp  Sprite.cpp  SpriteRenderer.cpp
src/: CMakeLists.txt  Camera.cpp  Camera.h  Game.cpp  Game.h  glad.c  main.cpp
src/World/: Chunk.cpp  Chunk.h  World.cpp  World.h
